# Cloud

./: CMakeLists.txt  README.md  notes.txt
include/core/: application.hpp  color.hpp  graphics_api.hpp  logger.hpp  startup_settings.hpp  utils.hpp  window.hpp
include/game/: game.hpp
include/platform/: console_signals.hpp  gtui.h  shared_library.hpp
include/subsystems/: render_interface.hpp  renderer.hpp
src/: main.cpp
src/core/: .logger.cpp.swo  .logger.cpp.swp  application.cpp  logger.cpp  window.cpp
src/editor/: editor.cpp
src/game/: game.cpp
src/platform/: console_signals.cpp  shared_library.cpp
src/subsystems/: input.cpp  render_interface.cpp  renderer.cpp
src/subsystems/renderers/: dx12_renderer.cpp  opengl_renderer.cpp
